--- a/Kalkulator22_2/Kalkulator22_2/MainPage.xaml
+++ b/Kalkulator22_2/Kalkulator22_2/MainPage.xaml
@@ -26,9 +26,9 @@
         <Frame x:Name="boxViewDisplay" BackgroundColor="Beige" 
                  Grid.Row="0" Grid.RowSpan="2" Grid.Column="0" Grid.ColumnSpan="4"/>
         <Label x:Name="labelDisplay1" Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="4" 
-               FontSize="25" Text="123456"/>
+               FontSize="25" Text=""/>
         <Label x:Name="labelDisplay0" Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="4" 
-               FontSize="25" Text="000012345"/>
+               FontSize="25" Text=""/>
 
         <!-- keys-->
         <Button x:Name="buttonCE" Text="CE" FontSize="25" FontAttributes="Bold" BackgroundColor="#C0C0C0"
