--- a/Kalkulator22_2/Kalkulator22_2/MainPage.xaml
+++ b/Kalkulator22_2/Kalkulator22_2/MainPage.xaml
@@ -10,8 +10,8 @@
 
             <Editor x:Name="editor0"
                     Grid.Column="0" Grid.ColumnSpan="4" Grid.Row="0"
-                    IsReadOnly="True"
-                    Text="123" FontSize="Title"/>
+                    IsReadOnly="True" IsSpellCheckEnabled="False" IsTextPredictionEnabled="False"
+                    Text="" FontSize="Title"/>
 
             
             <!-- keys-->
@@ -80,11 +80,7 @@
                     FontSize="Title" FontAttributes="Bold" BackgroundColor="#C0C0C0"
                     Grid.Row="5"  Grid.Column="3" Clicked="ButtonAddition_Clicked"/>
 
-
-
         </Grid>
-
-
 
     </Frame>
 
